<resources>

    <!--Stock Alert -->
    <string name="stock_alert_title">Estoque alerta</string>
    <string name="stock_alert_value">R$ %s</string>
    <string name="stock_alert_create">Criar Alerta</string>
    <string name="stock_alert_product_value_title">Valor do produto</string>
    <string name="stock_alert_product_list_empty">Você ainda não criou um alerta! </string>
    <string name="stock_alert_close_desc">Botão fechar</string>
    <string name="stock_alert_name_product_hint">Digite o nome do Produto</string>
    <string name="stock_alert_value_product_hint">Digite o Preço do Produto</string>
    <string name="stock_alert_available_product">Disponivel</string>
    <string name="stock_alert_not_available_product">Indisponivel</string>
    <string name="stock_alert_create_alert">Criar Alerta</string>
    <string name="stock_alert_edit_alert">Editar Alerta</string>
    <string name="stock_alert_create_alert_error">Preencha todos os dados</string>

</resources>