<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stockAlertContentCl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/stockTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_32dp"
            android:text="@string/stock_alert_title"
            android:textSize="@dimen/default_20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/stockAlertValueTv"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/infoIv"
            android:layout_width="@dimen/default_24dp"
            android:layout_height="@dimen/default_24dp"
            android:layout_marginEnd="@dimen/default_16dp"
            app:layout_constraintBottom_toBottomOf="@+id/stockTitleTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/stockTitleTv"
            app:srcCompat="@drawable/circled_info" />

        <TextView
            android:id="@+id/stockAlertValueTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_16dp"
            android:layout_marginTop="@dimen/default_4dp"
            android:textColor="@color/black"
            android:textSize="@dimen/default_18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stockTitleTv"
            tools:text="R$ 160.000,00" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_16dp"
            android:layout_marginTop="@dimen/default_42dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/stockAlertValueTv"
            app:layout_constraintTop_toBottomOf="@+id/stockAlertValueTv">

            <View
                android:layout_width="@dimen/default_1dp"
                android:layout_height="@dimen/default_30dp"
                android:background="@color/background_line" />

            <ImageView
                android:id="@+id/percentageIv"
                android:layout_width="@dimen/default_20dp"
                android:layout_height="@dimen/default_20dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="@dimen/default_16dp"
                app:srcCompat="@drawable/arrow_up" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="@dimen/default_4dp"
                android:text="4,38%"
                android:textColor="@color/green" />

            <View
                android:layout_width="@dimen/default_1dp"
                android:layout_height="@dimen/default_30dp"
                android:layout_marginStart="@dimen/default_16dp"
                android:background="@color/background_line" />

            <LinearLayout
                android:id="@+id/createAlertLl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/default_16dp"
                    android:layout_height="@dimen/default_16dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginStart="@dimen/default_16dp"
                    android:importantForAccessibility="no"
                    app:srcCompat="@drawable/alert_icon" />

                <TextView
                    android:id="@+id/createAlertTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginStart="@dimen/default_4dp"
                    android:text="@string/stock_alert_create" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/default_8dp"
            android:background="@color/background_line"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stockRv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/default_8dp"
            android:layout_marginTop="@dimen/default_16dp"
            android:layout_marginEnd="@dimen/default_8dp"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/default_56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:listitem="@layout/item_stock" />

        <TextView
            android:id="@+id/emptyListTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_alert_product_list_empty"
            android:textSize="@dimen/default_18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/loadingPb"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/orange"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>